--- a/GenericMapper.Test/GenericMapper.Test.csproj
+++ b/GenericMapper.Test/GenericMapper.Test.csproj
@@ -41,11 +41,11 @@
     <Reference Include="FluentAssertions">
       <HintPath>..\packages\FluentAssertions.2.2.0.0\lib\net45\FluentAssertions.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
@@ -78,14 +78,14 @@
     <Compile Include="Tools\FixtureTools.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Helpers\" />
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\GenericMapper\GenericMapper.csproj">
       <Project>{548ba46a-c87d-4b35-be6b-3ce32df8b1f6}</Project>
       <Name>GenericMapper</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Helpers\" />
-    <Folder Include="Interfaces\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
