--- a/EntityFrameWorkTest/EntityFrameWorkTest.csproj
+++ b/EntityFrameWorkTest/EntityFrameWorkTest.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ALBARAN.cs">
